--- a/catalog.html
+++ b/catalog.html
@@ -145,17 +145,32 @@
 						<div class="head">
 							<div class="filter_selected">
 								<div>
-									<span>Обслуживание:</span> Апартаменты, выезд
+									<span>Предпочтения</span> Все
 									<svg class="icon"><use xlink:href="images/sprite.svg#ic_close"></use></svg>
 								</div>
 
 								<div>
-									<span>Возраст:</span> до 25
+									<span>Место встречи:</span> Все
 									<svg class="icon"><use xlink:href="images/sprite.svg#ic_close"></use></svg>
 								</div>
 
 								<div>
-									<span>Вес:</span> до 60
+									<span>Типаж:</span> Все
+									<svg class="icon"><use xlink:href="images/sprite.svg#ic_close"></use></svg>
+								</div>
+
+								<div>
+									<span>Параметры</span>
+									<svg class="icon"><use xlink:href="images/sprite.svg#ic_close"></use></svg>
+								</div>
+
+								<div>
+									<span>Район:</span> Все
+									<svg class="icon"><use xlink:href="images/sprite.svg#ic_close"></use></svg>
+								</div>
+
+								<div>
+									<span>Метро:</span> Все
 									<svg class="icon"><use xlink:href="images/sprite.svg#ic_close"></use></svg>
 								</div>
 							</div>
@@ -163,6 +178,8 @@
 							<div class="filter_btn">
 								<button class="btn">
 									<svg class="icon"><use xlink:href="images/sprite.svg#ic_filter"></use></svg>
+
+									<span>2</span>
 								</button>
 							</div>
 
@@ -246,7 +263,7 @@
 						<div class="row">
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -274,7 +291,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -302,7 +319,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -330,7 +347,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -358,7 +375,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -386,7 +403,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -414,7 +431,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -442,7 +459,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -470,7 +487,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -498,7 +515,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -526,7 +543,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -554,7 +571,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -582,7 +599,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -610,7 +627,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -638,7 +655,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -666,7 +683,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -694,7 +711,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -722,7 +739,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -750,7 +767,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -778,7 +795,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -806,7 +823,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -834,7 +851,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -862,7 +879,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -890,7 +907,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -918,7 +935,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -946,7 +963,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -974,7 +991,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -1420,6 +1437,8 @@
 						</div>
 
 						<div class="submit">
+							<button type="button" class="cancel_btn">Отменить</button>
+
 							<button type="submit" class="submit_btn">Применить</button>
 						</div>
 					</form>
