--- a/fairy.html
+++ b/fairy.html
@@ -45,6 +45,14 @@
 					<div class="cont row">
 						<a href="/" class="logo">FeiRus</a>
 
+						<nav class="menu">
+							<div><a href="/">Схема метро</a></div>
+
+							<div><a href="/">Районы</a></div>
+
+							<div><a href="/">Интим-карта</a></div>
+						</nav>
+
 						<div class="langs modal_cont">
 							<button class="btn mini_modal_btn" data-modal-id="#langs_modal">
 								<span>Москва</span>
@@ -108,8 +116,12 @@
 
 							<div class="data">
 								<button class="favorite_btn">
-									<svg class="icon"><use xlink:href="images/sprite.svg#ic_favorite"></use></svg>
+									<svg class="icon"><use xlink:href="images/sprite.svg#ic_favorite_thin"></use></svg>
 								</button>
+
+								<div class="notice">
+									<svg class="icon"><use xlink:href="images/sprite.svg#ic_notice"></use></svg>
+								</div>
 
 								<div class="name">Вероника, 24</div>
 
