--- a/index.html
+++ b/index.html
@@ -109,41 +109,6 @@
 				</section>
 
 
-				<section class="top_fairies block">
-					<div class="row">
-						<a href="/" class="item">
-							<div class="thumb">
-								<img src="images/tmp/top_fairies_thumb1.jpg" alt="" loading="lazy">
-							</div>
-
-							<div class="info">
-								<div class="name">Анастасия, 25</div>
-
-								<div class="link">
-									<span>Посмотреть анкету</span>
-									<svg class="icon"><use xlink:href="images/sprite.svg#ic_arrow_hor"></use></svg>
-								</div>
-							</div>
-						</a>
-
-						<a href="/" class="item">
-							<div class="thumb">
-								<img src="images/tmp/top_fairies_thumb2.jpg" alt="" loading="lazy">
-							</div>
-
-							<div class="info">
-								<div class="name">Вероника, 24</div>
-
-								<div class="link">
-									<span>Посмотреть анкету</span>
-									<svg class="icon"><use xlink:href="images/sprite.svg#ic_arrow_hor"></use></svg>
-								</div>
-							</div>
-						</a>
-					</div>
-				</section>
-
-
 				<section class="fairies block">
 					<div class="cont">
 						<div class="block_head">
@@ -181,7 +146,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb2.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -209,7 +174,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -322,7 +287,7 @@
 
 							<div><a href="/" class="category">
 								<div class="thumb">
-									<img src="images/tmp/categoty_thumb.jpg" alt="" loading="lazy">
+									<img src="images/tmp/categoty_thumb2.jpg" alt="" loading="lazy">
 								</div>
 
 								<div>Эскорт</div>
@@ -330,7 +295,7 @@
 
 							<div><a href="/" class="category">
 								<div class="thumb">
-									<img src="images/tmp/categoty_thumb.jpg" alt="" loading="lazy">
+									<img src="images/tmp/categoty_thumb3.jpg" alt="" loading="lazy">
 								</div>
 
 								<div>Инди</div>
@@ -338,7 +303,7 @@
 
 							<div><a href="/" class="category">
 								<div class="thumb">
-									<img src="images/tmp/categoty_thumb.jpg" alt="" loading="lazy">
+									<img src="images/tmp/categoty_thumb4.jpg" alt="" loading="lazy">
 								</div>
 
 								<div>Агентства</div>
@@ -346,7 +311,7 @@
 
 							<div><a href="/" class="category">
 								<div class="thumb">
-									<img src="images/tmp/categoty_thumb.jpg" alt="" loading="lazy">
+									<img src="images/tmp/categoty_thumb5.jpg" alt="" loading="lazy">
 								</div>
 
 								<div>С видео</div>
@@ -354,7 +319,7 @@
 
 							<div><a href="/" class="category">
 								<div class="thumb">
-									<img src="images/tmp/categoty_thumb.jpg" alt="" loading="lazy">
+									<img src="images/tmp/categoty_thumb6.jpg" alt="" loading="lazy">
 								</div>
 
 								<div>VIP</div>
@@ -383,6 +348,8 @@
 							<div class="filter_btn">
 								<button class="btn">
 									<svg class="icon"><use xlink:href="images/sprite.svg#ic_filter"></use></svg>
+
+									<span>2</span>
 								</button>
 							</div>
 
@@ -466,7 +433,7 @@
 						<div class="row">
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb4.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -494,7 +461,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb5.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -522,7 +489,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb6.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -550,7 +517,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb7.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -578,7 +545,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb8.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -606,7 +573,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb9.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -634,7 +601,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb10.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -662,7 +629,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb4.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -690,7 +657,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb5.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -718,7 +685,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb6.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -746,7 +713,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb7.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -774,7 +741,7 @@
 
 							<div class="item">
 								<a href="/" class="thumb">
-									<img src="images/tmp/fairies_thumb1.jpg" alt="" loading="lazy">
+									<img src="images/tmp/fairies_thumb3.jpg" alt="" loading="lazy">
 								</a>
 
 								<div class="name">
@@ -823,6 +790,41 @@
 								<svg class="icon"><use xlink:href="images/sprite.svg#ic_arr_hor"></use></svg>
 							</a>
 						</div>
+					</div>
+				</section>
+
+
+				<section class="top_fairies block">
+					<div class="row">
+						<a href="/" class="item">
+							<div class="thumb">
+								<img src="images/tmp/top_fairies_thumb1.jpg" alt="" loading="lazy">
+							</div>
+
+							<div class="info">
+								<div class="name">Анастасия, 25</div>
+
+								<div class="link">
+									<span>Посмотреть анкету</span>
+									<svg class="icon"><use xlink:href="images/sprite.svg#ic_arrow_hor"></use></svg>
+								</div>
+							</div>
+						</a>
+
+						<a href="/" class="item">
+							<div class="thumb">
+								<img src="images/tmp/top_fairies_thumb2.jpg" alt="" loading="lazy">
+							</div>
+
+							<div class="info">
+								<div class="name">Вероника, 24</div>
+
+								<div class="link">
+									<span>Посмотреть анкету</span>
+									<svg class="icon"><use xlink:href="images/sprite.svg#ic_arrow_hor"></use></svg>
+								</div>
+							</div>
+						</a>
 					</div>
 				</section>
 
@@ -1220,6 +1222,8 @@
 						</div>
 
 						<div class="submit">
+							<button type="button" class="cancel_btn">Отменить</button>
+
 							<button type="submit" class="submit_btn">Применить</button>
 						</div>
 					</form>
