--- a/catalog.html
+++ b/catalog.html
@@ -1045,6 +1045,10 @@
 
 
 				<section class="filter">
+					<button class="close_btn">
+						<svg class="icon"><use xlink:href="images/sprite.svg#ic_close"></use></svg>
+					</button>
+
 					<div class="title">Фильтры</div>
 
 					<form action="" class="form">
