--- a/enter.html
+++ b/enter.html
@@ -28,6 +28,8 @@
 		<link rel="stylesheet" href="css/variables.css">
 
 		<link rel="stylesheet" href="css/fancybox.css">
+		<link rel="stylesheet" href="css/swiper-bundle.min.css">
+		<link rel="stylesheet" href="css/swiper.css">
 
 		<link rel="stylesheet" href="css/global.css">
 		<link rel="stylesheet" href="css/typography.css">
@@ -155,6 +157,7 @@
 		<script src="js/jquery-3.6.3.min.js"></script>
 		<script src="js/functions.js"></script>
 		<script src="js/fancybox.js"></script>
+		<script src="js/swiper-bundle.min.js"></script>
 		<script src="js/scripts.js"></script>
 	</body>
 </html>
