--- a/demo_links.html
+++ b/demo_links.html
@@ -189,6 +189,15 @@
 				<li><a href="./catalog.html" target="_blank">Каталог</a></li>
 				<li><a href="./enter.html" target="_blank">Вход на сайт</a></li>
 				<li><a href="./fairy.html" target="_blank">Страница феи</a></li>
+				<li><a href="./map.html" target="_blank">Карта</a></li>
+				<li><a href="./lk_favorites.html" target="_blank">ЛК - Избранное</a></li>
+				<li><a href="./lk_tariffs.html" target="_blank">ЛК - Тарифы</a></li>
+				<li><a href="./lk_fin_stats.html" target="_blank">ЛК - Финансовая статистика</a></li>
+				<li><a href="./lk_messages.html" target="_blank">ЛК - Сообщения</a></li>
+				<li><a href="./lk_send_message.html" target="_blank">ЛК - Написать соощение</a></li>
+				<li><a href="./lk_notifications.html" target="_blank">ЛК - Уведомления</a></li>
+				<li><a href="./lk_fairies_empty.html" target="_blank">ЛК - Проститутки</a></li>
+				<li><a href="./lk_fairies_empty.html" target="_blank">ЛК - Проститутки - Пусто</a></li>
 			</ol>
 		</div>
 	</body>
