--- a/demo_links.html
+++ b/demo_links.html
@@ -198,6 +198,7 @@
 				<li><a href="./lk_notifications.html" target="_blank">ЛК - Уведомления</a></li>
 				<li><a href="./lk_fairies_empty.html" target="_blank">ЛК - Проститутки</a></li>
 				<li><a href="./lk_fairies_empty.html" target="_blank">ЛК - Проститутки - Пусто</a></li>
+				<li><a href="./lk_profile.html" target="_blank">ЛК - Профиль</a></li>
 			</ol>
 		</div>
 	</body>
