--- a/demo_links.html
+++ b/demo_links.html
@@ -199,6 +199,7 @@
 				<li><a href="./lk_fairies_empty.html" target="_blank">ЛК - Проститутки</a></li>
 				<li><a href="./lk_fairies_empty.html" target="_blank">ЛК - Проститутки - Пусто</a></li>
 				<li><a href="./lk_profile.html" target="_blank">ЛК - Профиль</a></li>
+				<li><a href="./lk_deposite.html" target="_blank">ЛК - Пополнение баланса</a></li>
 			</ol>
 		</div>
 	</body>
