--- a/lk_favorites.html
+++ b/lk_favorites.html
@@ -98,7 +98,7 @@
 						<button class="mob_lk_menu_btn">Меню</button>
 
 						<aside>
-							<button class="lk_add_btn">ДОБАВИТЬ АНКЕТУ</button>
+							<a href="/" class="lk_add_btn">ДОБАВИТЬ АНКЕТУ</a>
 
 							<div class="lk_menu">
 								<div>
