--- a/lk_deposite.html
+++ b/lk_deposite.html
@@ -265,11 +265,11 @@
 										<div class="title">Инструкция по работе с webmoney.</div>
 
 										<div class="text_block">
-											<p>1. Вам нужно зарегистрироваться в системе WebMoney. Перейдите на <a href="/" target="_blank" rel="noopener nofollow">официальный сайт</a> и в правом верхнем углу нажмите желтую кнопку Зарегистрироваться или сразу перейдите на <a href="/" target="_blank" rel="noopener nofollow">страницу регистрации</a>.<br> - Вам нужно будет указать номер мобильного телефона и подтвердить его по смс.<br> - Укажите паспортные данные в <a href="/" target="_blank" rel="noopener nofollow">Профиле</a> и дождаться их проверки.</p>
+											<p>1. Вам нужно зарегистрироваться в системе WebMoney. Перейдите на <a href="/" target="_blank" rel="noopener nofollow"><b>официальный сайт</b></a> и в правом верхнем углу нажмите желтую кнопку Зарегистрироваться или сразу перейдите на <a href="/" target="_blank" rel="noopener nofollow"><b>страницу регистрации</b></a>.<br> - Вам нужно будет указать номер мобильного телефона и подтвердить его по смс.<br> - Укажите паспортные данные в <a href="/" target="_blank" rel="noopener nofollow"><b>Профиле</b></a> и дождаться их проверки.</p>
 
-											<p>2. Вы можете пополнить баланс своего wmz кошелька:<br> - Обменяв деньги с карты на официальной бирже webmoney <a href="https://exchanger.money" target="_blank" rel="noopener nofollow">exchanger.money</a> или на бирже <a href="https://bestchange.ru" target="_blank" rel="noopener nofollow">bestchange.ru</a>.</p>
+											<p>2. Вы можете пополнить баланс своего wmz кошелька:<br> - Обменяв деньги с карты на официальной бирже webmoney <a href="https://exchanger.money" target="_blank" rel="noopener nofollow"><b>exchanger.money</b></a> или на бирже <a href="https://bestchange.ru" target="_blank" rel="noopener nofollow"><b>bestchange.ru</b></a>.</p>
 
-											<p>Следить за балансом кошелька проще всего через сайт <a href="/" target="_blank" rel="noopener nofollow">wallet.web.money</a> или в приложении мобильного телефона <a href="/" target="_blank" rel="noopener nofollow">webmoney</a>.</p>
+											<p>Следить за балансом кошелька проще всего через сайт <a href="/" target="_blank" rel="noopener nofollow"><b>wallet.web.money</b></a> или в приложении мобильного телефона <a href="/" target="_blank" rel="noopener nofollow"><b>webmoney</b></a>.</p>
 										</div>
 									</div>
 
@@ -277,15 +277,15 @@
 										<div class="title">Инструкция по работе с криптовалютой Tether TRC20 (USDT)</div>
 
 										<div class="text_block">
-											<p>1. Устанавливаем на свой телефон криптокошелек — <a href="/" target="_blank" rel="noopener nofollow">TrustWallet</a>.</p>
+											<p>1. Устанавливаем на свой телефон криптокошелек — <a href="/" target="_blank" rel="noopener nofollow"><b>TrustWallet</b></a>.</p>
 
-											<p>2. Заходим на сайт BestChange.ru и выбираем направление обмена <a href="/" target="_blank" rel="noopener nofollow">Сбербанк Tether TRC20</a> или<br> <a href="/" target="_blank" rel="noopener nofollow">Карта Мир => Tether TRC20</a> и тд.</p>
+											<p>2. Заходим на сайт BestChange.ru и выбираем направление обмена <a href="/" target="_blank" rel="noopener nofollow"><b>Сбербанк Tether TRC20</b></a> или<br> <a href="/" target="_blank" rel="noopener nofollow"><b>Карта Мир => Tether TRC20</b></a> и тд.</p>
 
-											<p>3. Также для перевода USDT вам необходимо купить TRON (TRX) (сумма не большая, буквально за 1000р и хватит на долго, TRON используется как комиссия сети за перевод USDT) <a href="/" target="_blank" rel="noopener nofollow">Сбербанк => TRON</a> или<br> <a href="/" target="_blank" rel="noopener nofollow">Карта Мир => TRON</a> и тд.</p>
+											<p>3. Также для перевода USDT вам необходимо купить TRON (TRX) (сумма не большая, буквально за 1000р и хватит на долго, TRON используется как комиссия сети за перевод USDT) <a href="/" target="_blank" rel="noopener nofollow"><b>Сбербанк => TRON</b></a> или<br> <a href="/" target="_blank" rel="noopener nofollow"><b>Карта Мир => TRON</b></a> и тд.</p>
 
 											<p>4. Выбираем обменник с самым выгодным курсом обмена и совершаем обмен на ваш кошелек.</p>
 
-											<p>5. На сайте <a href="https://skydigital.agency" target="_blank" rel="noopener nofollow">skydigital.agency</a> где происходит пополнение вашего баланса, выбираете оплату Вариант 3: Криптовалюта, там выбираете Tether USDT TRC20 и оплачиваете сумму указанную на странице заявки. Удобнее оплачивать просканиров qr код в вашем приложении TrustWallet.</p>
+											<p>5. На сайте <a href="https://skydigital.agency" target="_blank" rel="noopener nofollow"><b>skydigital.agency</b></a> где происходит пополнение вашего баланса, выбираете оплату Вариант 3: Криптовалюта, там выбираете Tether USDT TRC20 и оплачиваете сумму указанную на странице заявки. Удобнее оплачивать просканиров qr код в вашем приложении TrustWallet.</p>
 										</div>
 									</div>
 								</div>
