--- a/fairy.html
+++ b/fairy.html
@@ -66,15 +66,27 @@
 							</button>
 
 							<div class="mini_modal" id="langs_modal">
+								<div><button class="btn active">Москва</button></div>
 
+								<div><button class="btn">Санкт-Петербург</button></div>
 							</div>
 						</div>
 
 						<div class="links">
-							<div class="search">
-								<a href="/">
+							<div class="search modal_cont">
+								<button class="btn mini_modal_btn" data-modal-id="#id">
 									<svg class="icon"><use xlink:href="images/sprite.svg#ic_search"></use></svg>
-								</a>
+								</button>
+
+								<div class="mini_modal" id="id">
+									<form action="">
+										<input type="text" name="" value="" class="input" placeholder="Введите ваш запрос">
+
+										<button type="button" class="close_btn">
+											<svg class="icon"><use xlink:href="images/sprite.svg#ic_close"></use></svg>
+										</button>
+									</form>
+								</div>
 							</div>
 
 							<div class="favorites">
@@ -87,6 +99,37 @@
 								<button class="btn modal_btn" data-modal="profile_modal">
 									<svg class="icon"><use xlink:href="images/sprite.svg#ic_user"></use></svg>
 								</button>
+							</div>
+
+							<div class="mob_menu modal_cont">
+								<button class="btn mini_modal_btn" data-modal-id="#mob_menu_modal">
+									<svg class="icon"><use xlink:href="images/sprite.svg#ic_menu"></use></svg>
+								</button>
+
+								<div class="mini_modal" id="mob_menu_modal">
+									<div class="head">
+										<a href="/" class="logo">FeiRus</a>
+
+										<button class="close_btn">
+											<svg class="icon"><use xlink:href="images/sprite.svg#ic_close"></use></svg>
+										</button>
+									</div>
+
+									<div class="links">
+										<div><a href="/">Интим карта</a></div>
+
+										<div><a href="/">Районы</a></div>
+
+										<div><a href="/">Схема  метро</a></div>
+									</div>
+
+									<div class="account">
+										<button class="btn modal_btn" data-modal="profile_modal">
+											<svg class="icon"><use xlink:href="images/sprite.svg#ic_logout"></use></svg>
+											<span>Вход / регистрация</span>
+										</button>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -520,11 +563,6 @@
 
 								<div class="text">Красивая, обаятельная, чертовски привлекательная, развратная, молодая, четкая, весёлая и оооочень любящая секс девочка! С ней кайф не только трахаться, но и просыпаться по утрам. В квартире я почувствовал уют и комфорт. Если сделает скидку до 15К в час, перееду к ней жить на неделю))) 2,5 млн коплю!) Рекомендую всем оценить вживую.  Лизи - круть крутая со всех сторон!</div>
 
-								<button class="spoler_btn">
-									<span>Раскрыть ответ</span>
-									<span>Скрыть ответ</span>
-								</button>
-
 								<div class="answer">
 									<div class="author">Ева</div>
 
@@ -538,11 +576,6 @@
 								<div class="date">10.01.2024</div>
 
 								<div class="text">Красивая, обаятельная, чертовски привлекательная, развратная, молодая, четкая, весёлая и оооочень любящая секс девочка! С ней кайф не только трахаться, но и просыпаться по утрам. В квартире я почувствовал уют и комфорт. Если сделает скидку до 15К в час, перееду к ней жить на неделю))) 2,5 млн коплю!) Рекомендую всем оценить вживую.  Лизи - круть крутая со всех сторон!</div>
-
-								<button class="spoler_btn">
-									<span>Раскрыть ответ</span>
-									<span>Скрыть ответ</span>
-								</button>
 
 								<div class="answer">
 									<div class="author">Ева</div>
