--- a/lk_messages.html
+++ b/lk_messages.html
@@ -65,15 +65,27 @@
 							</button>
 
 							<div class="mini_modal" id="langs_modal">
+								<div><button class="btn active">Москва</button></div>
 
+								<div><button class="btn">Санкт-Петербург</button></div>
 							</div>
 						</div>
 
 						<div class="links">
-							<div class="search">
-								<a href="/">
+							<div class="search modal_cont">
+								<button class="btn mini_modal_btn" data-modal-id="#id">
 									<svg class="icon"><use xlink:href="images/sprite.svg#ic_search"></use></svg>
-								</a>
+								</button>
+
+								<div class="mini_modal" id="id">
+									<form action="">
+										<input type="text" name="" value="" class="input" placeholder="Введите ваш запрос">
+
+										<button type="button" class="close_btn">
+											<svg class="icon"><use xlink:href="images/sprite.svg#ic_close"></use></svg>
+										</button>
+									</form>
+								</div>
 							</div>
 
 							<div class="favorites">
@@ -86,6 +98,37 @@
 								<button class="btn modal_btn" data-modal="profile_modal">
 									<svg class="icon"><use xlink:href="images/sprite.svg#ic_user"></use></svg>
 								</button>
+							</div>
+
+							<div class="mob_menu modal_cont">
+								<button class="btn mini_modal_btn" data-modal-id="#mob_menu_modal">
+									<svg class="icon"><use xlink:href="images/sprite.svg#ic_menu"></use></svg>
+								</button>
+
+								<div class="mini_modal" id="mob_menu_modal">
+									<div class="head">
+										<a href="/" class="logo">FeiRus</a>
+
+										<button class="close_btn">
+											<svg class="icon"><use xlink:href="images/sprite.svg#ic_close"></use></svg>
+										</button>
+									</div>
+
+									<div class="links">
+										<div><a href="/">Интим карта</a></div>
+
+										<div><a href="/">Районы</a></div>
+
+										<div><a href="/">Схема  метро</a></div>
+									</div>
+
+									<div class="account">
+										<button class="btn modal_btn" data-modal="profile_modal">
+											<svg class="icon"><use xlink:href="images/sprite.svg#ic_logout"></use></svg>
+											<span>Вход / регистрация</span>
+										</button>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
